--- a/wiki/lhCpp.wiki
+++ b/wiki/lhCpp.wiki
@@ -97,7 +97,7 @@ if () {
  * `[lhCpp_GotoImplementation :GOTOIMPL]`, `:MOVETOIMPL`: search and jump to a function definition from its declaration, provide a default one in the _ad'hoc_ implementation file if no definition is found
  * `[lhCpp_Accessors :ADDATTRIBUTE]`: old facility that helps define const-correct accessors and mutator, will be reworked.
  * `:CppDisplayUnmatchedFunctions`, `<c-x>u`: shows the list of functions for which there is neither a declaration, nor a definition
- * `Override`: Ask which inherited virtual function should be overridden in the current class (feature still in its very early stages)
+ * `:Override`: Ask which inherited virtual function should be overridden in the current class (feature still in its very early stages)
 
 == Syntax highlighting ==
  * assign in condition (bad practice)
