--- a/wiki/lhRefactor.wiki
+++ b/wiki/lhRefactor.wiki
@@ -22,7 +22,7 @@ The complete documentation can be browsed [http://code.google.com/p/lh-vim/sourc
   * `<C-X>p` and `<C-X>P` to Put back the definition that as been extracted
 
 = Download =
-  * Requirements: Vim 7.1, [lhVimLib lh-vim-lib]
+  * Requirements: Vim 7.1, [lhVimLib lh-vim-lib], and my [lhBrackets bracketing system].
   * Checkout from the SVN repository
     {{{  
 # Non-members may check out a read-only working copy anonymously over HTTP.
