--- a/map-tools/branches/1.0.0/Changelog
+++ b/map-tools/branches/1.0.0/Changelog
@@ -1,10 +1,9 @@
-With this 1.0.0 branche of map-tools, I'm undergoind profound
+Since with this 1.0.0 version of map-tools, I've undergone profound
 modifications in common_bracket kernel. 
 Instead of having to define several buffer-local variables to decide
 which brackets will be supported with files of a given filetype (and
 instead of having several behaviours hard coded (like how {} expands in
-(La)TeX, ...)), now the brackets are define with a new command: :Brackets
+(La)TeX, ...)), now the brackets are defined with a new command: :Brackets
 
 BTW, a few files from other modules (like lh-cpp) are available here for
-the moment, they will be moved to lh-cpp once v1.0.0 kernel of
-common_brackets is stabilized.
+the moment, they are duplicated copied to lh-cpp.
