--- a/wiki/lhVimLib.wiki
+++ b/wiki/lhVimLib.wiki
@@ -11,6 +11,8 @@ This library has been conceived as a suite of |autoload| plugins, and a few
 
 The complete documentation can be browsed [http://code.google.com/p/lh-vim/source/browse/vim-lib/trunk/doc/lh-vim-lib.txt in the subversion repository]
 
+*Important: Since Version 2.2.0, the naming policy of these autoload functions have been harmonized. Now, most names are in lower cases, with words separated by underscores. *
+
 = Functions =
 
   * [lhVimLib#Miscellanous_functions Miscellanous functions]
@@ -24,26 +26,30 @@ The complete documentation can be browsed [http://code.google.com/p/lh-vim/sourc
   * [lhVimLib#UI_functions UI functions]
 
 == Miscellanous functions ==
-|| `lh#common#echomsgMultilines()` || Applies `:echomsg` on a multi-lines text ||
-|| `lh#common#ErrorMsg()` || Displays an error message ||
-|| `lh#common#WarningMsg()` || Displays a warning ||
-|| `lh#common#CheckDeps()` || Checks a VimL symbol is loaded ||
+|| `lh#askvim#exe()` || Returns what a VimL command echoes ||
+|| `lh#common#check_deps()` || Checks a VimL symbol is loaded ||
+|| `lh#common#echomsg_multilines()` || Applies `:echomsg` on a multi-lines text ||
+|| `lh#common#error_msg()` || Displays an error message ||
+|| `lh#common#warning_msg()` || Displays a warning ||
+|| `lh#encoding#iconv()` || Unlike `iconv()`, this wrapper returns {expr} when we know no conversion can be achieved. ||
+|| `lh#event#register_for_one_execution_at()` || Registers a command to be executed once (and only once) when an event is triggered on the current file ||
+|| `lh#option#get()` || Fetches the value of a user defined option, that may be _empty_ ||
+|| `lh#option#get_non_empty()` || Fetches the value of a user defined option, that is not _empty_ ||
+|| `lh#position#char_at_mark()` || Obtains the character under a mark ||
+|| `lh#position#char_at_pos()` || Obtains the character at a given position ||
+|| `lh#position#is_before()` || Tells if a position in a buffer is before another one||
 || `lh#visual#selection()` || Returns the visually selected text ||
-|| `lh#option#Get()` || Fetches the value of a user defined option, that may be _empty_ ||
-|| `lh#option#GetNonEmpty()` || Fetches the value of a user defined option, that is not _empty_ ||
-|| `lh#askvim#Exe()` || Returns what a VimL command echoes ||
-|| `lh#position#IsBefore()` || Tells if a position in a buffer is before another one||
-|| `lh#position#CharAtMark()` || Obtains the character under a mark ||
-|| `lh#position#CharAtPos()` || Obtains the character at a given position ||
-|| `lh#event#RegisterForOneExecutionAt()` || Registers a command to be executed once (and only once) when an event is triggered on the current file ||
-|| `lh#encoding#Iconv()` || Unlike `iconv()`, this wrapper returns {expr} when we know no conversion can be achieved. ||
 
 
 == Lists related functions ==
-|| `lh#list#Match()` || Searches the first element in a list that matches a pattern ||
-|| `lh#list#Find_if()` || Searches the first element in a list that verifies a predicate ||
+|| `lh#list#acculate()` || Accumulates the elements from a list ||
+|| `lh#list#copy_if()` || Copies the elements from a list that match a predicate ||
+|| `lh#list#find_if()` || Searches the first element in a list that verifies a predicate ||
+|| `lh#list#intersect()` || Insersection of two lists ||
+|| `lh#list#match()` || Searches the first element in a list that matches a pattern ||
+|| `lh#list#subset()` || Builds a subset slice of a list ||
+|| `lh#list#transform()` || Applies a transformation on each element from a list ; unlike `map()`, the input list is left unchanged ||
 || `lh#list#unique_sort()` || Sorts the elements of a list, and makes sure they are all unique (trunk only for the moment) ||
-|| `lh#list#Transform()` || Applies a transformation on each element from a list ; unlike `map()`, the input list is left unchanged ||
 
 
 == Graphs related functions ==
@@ -52,14 +58,19 @@ The complete documentation can be browsed [http://code.google.com/p/lh-vim/sourc
 
 
 == Paths related functions ==
-|| `lh#path#Simplify()` || Like `simplify()`, but also strips the leading `./` ||
-|| `lh#path#StripCommon()` || In a set of pathnames, strips the leading part they all have in common ||
-|| `lh#path#StripStart()` || Strips the leading part of a pathname if found in the given list of pathnames ||
-|| `lh#path#isAbsolutePath()` || Tells whether the parameter is an absolute pathname ||
-|| `lh#path#isURL()` || Tells whether the parameter is an URL ||
-|| `lh#path#SelectOne()` || Asks the end-user to select one pathname ||
-|| `lh#path#ToRelative()` || Transforms a pathname to a pathname relative to the current directory ||
-|| `lh#path#GlobAsList()` || Returns `globpath()`result as a list ||
+|| `lh#path#common()` || Returns the biggest common part between several paths ||
+|| `lh#path#depth()` || Returns the depth of a path ||
+|| `lh#path#glob_as_list()` || Returns `globpath()`result as a list ||
+|| `lh#path#is_absolute_path()` || Tells whether the parameter is an absolute pathname ||
+|| `lh#path#is_url()` || Tells whether the parameter is an URL ||
+|| `lh#path#select_one()` || Asks the end-user to select one pathname ||
+|| `lh#path#simplify()` || Like `simplify()`, but also strips the leading `./` ||
+|| `lh#path#strip_common()` || In a set of pathnames, strips the leading part they all have in common ||
+|| `lh#path#strip_start()` || Strips the leading part of a pathname if found in the given list of pathnames ||
+|| `lh#path#to_dirname()` || Complete the current path with '/' if missing ||
+|| `lh#path#to_relative()` || Transforms a pathname to a pathname relative to the current directory ||
+|| `lh#path#relative_to()` || Returns the relative offset to reference files in another directory ||
+|| `lh#path#to_regex()` || Builds a regex that can be used to match pathnames ||
 
 
 == Commands related functions ==
@@ -68,33 +79,40 @@ The complete documentation can be browsed [http://code.google.com/p/lh-vim/sourc
 
 
 == Menus related functions ==
-|| `lh#menu#DefToggleItem()` || This function defines a |menu| entry that will be associated to a |global-variable| whose values can be cycled and explored from the menu. This global variable can be seen as an enumerate whose value can be cyclically updated through a menu. ||
-|| `lh#menu#Text()` || Transforms a regular text into a text that can be directly used with `:menu` commands. ||
-|| `lh#menu#Make()` || Helper function to associate menus and mappings to actions in different modes ||
-|| `lh#menu#IVN_Make()` || Like `lh#menu#Make()`, but dedicated to text inserting actions and INSERT, NORMAL, and VISUAL modes ||
-|| `lh#menu#CMD_andclear_v()` || Â«Â» ||
-|| `lh#menu#Map_all()` || Â«Â» ||
-|| `lh#askvim#Menu()` || Experimental functions to ask vim which menus are defined ||
+|| `lh#menu#def_toggleitem()` || This function defines a |menu| entry that will be associated to a |global-variable| whose values can be cycled and explored from the menu. This global variable can be seen as an enumerate whose value can be cyclically updated through a menu. ||
+|| `lh#menu#text()` || Transforms a regular text into a text that can be directly used with `:menu` commands. ||
+|| `lh#menu#make()` || Helper function to associate menus and mappings to actions in different modes. ||
+|| `lh#menu#IVN_make()` || Like `lh#menu#Make()`, but dedicated to text inserting actions and INSERT, NORMAL, and VISUAL modes. ||
+|| `lh#menu#is_in_visual_mode()` || Tells whether the action triggered by a menu/map was initiated while in visual mode.||
+|| `lh#menu#map_all()` || Helper function to define several mappings at once as `:amenu` would do ||
+|| `lh#askvim#menu()` || Experimental functions to ask vim which menus are defined ||
 
 See also the documentation of the old functions at [http://hermitte.free.fr/vim/general.php#expl_menu_map]
 
 
 == Buffers related functions ==
-|| `lh#buffer#Find()` || Finds and jumps to the window that matches the buffer identifier, does nothing if not found ||
-|| `lh#buffer#Jump()` || Like `lh#buffer#Find()`, but opens the buffer in a new window if it no matching window was opened before ||
-|| `lh#buffer#Scratch()` || Opens a new scratch buffer ||
+|| `lh#buffer#list()` || Returns the list of `buflisted` buffers. ||
+|| `lh#buffer#find()` || Finds and jumps to the window that matches the buffer identifier, does nothing if not found. ||
+|| `lh#buffer#jump()` || Like `lh#buffer#Find()`, but opens the buffer in a new window if it no matching window was opened before. ||
+|| `lh#buffer#scratch()` || Opens a new scratch buffer. ||
 || `lh#buffer#dialog#toggle_help()` || see [Dialog lh-vim-lib/dialog] ||
 || `lh#buffer#dialog#add_help()` || see [Dialog lh-vim-lib/dialog] ||
 || `lh#buffer#dialog#new()` || see [Dialog lh-vim-lib/dialog] ||
-|| `lh#buffer#dialog#Select()` || see [Dialog lh-vim-lib/dialog] ||
+|| `lh#buffer#dialog#select()` || see [Dialog lh-vim-lib/dialog] ||
 
 
 == Syntax related functions ==
-|| `lh#syntax#NameAt()` || Tells the syntax kind of the character at the given position ||
-|| `lh#syntax#NameAtMark()` || Tells the syntax kind of the character at the given mark ||
-|| `lh#syntax#Skip()` `lh#syntax#SkipAt()` `lh#syntax#SkipAtMark()` || Helper functions to be used with `searchpair()` in order to ignore comments, doxygen comments, strings, and characters while searching ||
-|| `lh#syntax#SynListRaw()` || Returns the result of "`syn list {group-name}`" as a string ||
-|| `lh#syntax#SynList()` || Like `lh#syntax#SynListRaw()`, but reinterprets the results (experimental) ||
+|| `lh#syntax#name_at()` || Tells the syntax kind of the character at the given position ||
+|| `lh#syntax#name_at_mark()` || Tells the syntax kind of the character at the given mark ||
+|| `lh#syntax#skip()` `lh#syntax#SkipAt()` `lh#syntax#SkipAtMark()` || Helper functions to be used with `searchpair()` in order to ignore comments, doxygen comments, strings, and characters while searching ||
+|| `lh#syntax#syn_list_raw()` || Returns the result of "`syn list {group-name}`" as a string ||
+|| `lh#syntax#syn_list()` || Like `lh#syntax#SynListRaw()`, but reinterprets the results (experimental) ||
+
+
+== Functors ==
+|| `lh#function#bind()` || Builds a functor object. ||
+|| `lh#function#execute()` || Executes a functor object. ||
+|| `lh#function#prepare()` || Prepares a functor object to be `eval`uated. ||
 
 
 == UI functions ==
@@ -119,7 +137,7 @@ See [http://hermitte.free.fr/vim/general.php#expl_words_tools]
 
 = Download =
   * Requirements: Vim 7.1
-  * As a vimball: [http://lh-vim.googlecode.com/files/lh-vim-lib-2.1.0.vba here (v2.1.0)], or at [http://www.vim.org/scripts/script.php?script_id=214 Vim.org]
+  * As a vimball: [http://lh-vim.googlecode.com/files/lh-vim-lib-2.2.0.vba here (v2.2.0)], or at [http://www.vim.org/scripts/script.php?script_id=214 Vim.org]
   * Checkout from the SVN repository
     {{{  
 # Non-members may check out a read-only working copy anonymously over HTTP.
