--- a/wiki/muTemplate.wiki
+++ b/wiki/muTemplate.wiki
@@ -5,6 +5,22 @@
 
 µTemplate is a template-files loader for Vim. Once loaded, templates are interpreted and expanded according to a flexible syntax.
 
+  * [muTemplate#Features Features]
+  * [muTemplate#Shipped_templates Shipped templates]
+    * [muTemplate#Vim Vim]
+    * [muTemplate#C_&_C++ C & C++]
+    * [muTemplate#LaTeX LaTeX]
+    * [muTemplate#XSLT XSLT]
+    * [muTemplate#Other_filetypes Other filetypes]
+  * [muTemplate#Examples Examples]
+    * [muTemplate#C-_for_snippet C-`for` snippet]
+    * [muTemplate#Interactive_template-file:_C++_Class_Template Interactive template-file: C++ Class Template]
+    * [muTemplate#Completely_useless_recursive_example Completely useless recursive example]
+  * [muTemplate#Download Download]
+  * [muTemplate#Credits Credits]
+  * [muTemplate#See_also See also]
+
+
 == Features ==
   * Template-files can be expanded:
     * automatically when opening a new buffer (unless deactivated from the .vimrc),
@@ -19,7 +35,74 @@
   * Fully integrated with my [lhBrackets placeholders-system] ;
   * Supports re-indentation (if desired) ; 
   * Works well with vim folding ;
-  * I18n friendly
+  * I18n friendly ;
+  * The expansion happens after any _[http://code.google.com/p/lh-vim/source/browse/misc/trunk/plugin/local_vimrc.vim local vimrcs]_ present are loaded -- in order to set project-specific variables before the expansion is done.
+
+However, it misses the following features:
+  * Tied placeholders (modifying one placeholder modifyies other placeholders) -- I have to see how I can exploit [http://www.vim.org/scripts/script.php?script_id=953 multiselect] in order to provide this feature.
+  * Several snippets per template-file -- It's extremelly unlikelly that µtemplate will ever work this way.
+
+== Shipped templates ==
+µTemplate is shipped by default with the following templates:
+
+=== Vim ===
+
+  * On creation of a new `.vim` file, the file is filled according to the kind of vim-script detected (from the directory where the new file is stored):
+    * _autoload-plugins_ will contain a few debug oriented functions ;
+    * _(plain) plugins_ will contain a global anti-reinclusion guard and its override variable (for maintenance purpose), an internal `s:k_version` number, and a few indications about what plugins should contain ;
+    * _ft-plugins_ will contain a global and a local anti-reinclusion guard and their override variable (for maintenance purpose), an internal `s:k_version` number, and a few indications about what ft-plugins should contain ;
+    * _local-vimrcs_ will look a lot like ft-plugin ;
+    * otherwise, the file won't contain anything specific ;
+    * *in all cases*:
+      * a default header is filled with RCS tags (`$Id$`, `$Date$`), and other fields for the filename (kept relative to `{rtp}` when possible), the author/maintainer, the version, a short description, history, todo, _etc._ ;
+      * `cpo&vim` is set for the duration of the script ;
+      * a footer forces `foldmethod` to `marker`.
+  All the choices made are the result of what I've come to consider over the years to be good practices regarding vim files contents.
+  Each part may be individually overridden in you local settings (`:h MuT-paths-override`)
+
+  * The snippets _foreach_, _fori_, and _loop-arg_ expand respectively to the `:for` vim-loop, or a `:while` vim-loop that increments _i_, or another index variable.
+
+  * The snippet _plugmap_ expands into an overridable _plug-mapping_.
+
+  * The snippet _autoload-debug_ expands into the debug-oriented functions added by default to autoload-plugins -- its purpose is to add simply those functions to autoload-plugins that don't have them yet.
+
+  * The snippet _function_ expands into a `:function!` definition. If the current script is an autoload-plugin, the function name matches the autoload-plugin name -- to insert other kinds of functions, just use the `fu` abbreviation from `vim_snippets.vim`. Otherwise, the function name will just start with a `s:`.
+
+  * On creation of a new vim help file [*], the file is pre-filed with:
+    * a header compatible with what is expected by `:h local-additions`, your name, and a `$Date$`,
+    * a default footer (`$Id`, copyright line, modeline, _etc._)
+    * and two skeletons for the sections _Contents_, and _Presentation_.
+  [*]Creating a new vim help file may require the following actions: 
+{{{
+:e ~/.vim/doc/foo.txt
+:set ft=help
+:MuTemplate
+}}}
+
+
+NB: there are no µTemplate snippets for `:if`, `:try`, _etc._ because they are maintained independently thanks to [lhBrackets my bracketing system] in `vim_snippets.vim` (todo: add link).
+
+=== C & C++ ===
+Most of my C and C++ template-files are shipped with [lhCpp lh-cpp]. However a few ones are still shipped with µTemplate:
+  * On creation of a new C or C++ file, the file is filled according to the kind of file detected:
+    * _header files_ first compute the relative current filename from the root of the current project, and contains a (-n overridable) file header, and adds automatically generated anti-reinclusion guards
+    * _source files_ first compute the relative current filename from the root of the current project, and contains a (-n overridable) file header, and includes any matching _header file_ found (in the current directory, or any compatible directory  [http://code.google.com/p/lh-vim/source/browse/cpp/trunk/after/plugin/a.vim a.vim] is installed)
+
+  * snippets for `for`, `for (int i`, `while`, `do...while`, `switch`, `if` ; NB: [lhCpp lh-cpp] defines alternative [lhCpp#Code_snippets smart-snippets for these control-statements].
+
+=== LaTeX ===
+
+Four snippets that are more a proof-of-concept than real snippets for intensive LaTeX editing are provided for:
+  * `\begin{center}`, `\figure`
+  * beamer frames
+
+=== XSLT ===
+
+Several snippets are provided for `attribute`, `for-each`, `if`, `otherwise`, `template match`, `template name`, `value-of`, and `when`
+
+=== Other filetypes ===
+
+Extremely simple template-files are provided for new perl, html, and tcl files. 
 
 
 == Examples == 
@@ -99,7 +182,7 @@ private:
 };<++>
 }}}
 
-=== Completely useless example ===
+=== Completely useless recursive example ===
  * test.template
 {{{
 VimL: let s:value_start  = '¡'
@@ -136,45 +219,6 @@ This part has been included¡s:msg¡ ¡((s:times==1)?'once':(s:times==2 ? 'twice
 VimL: if s:times <= 4 | call s:Include('test-included') | endif 
 VimL: silent! unlet s:times
 }}}
-
-
-== Shipped templates ==
-µTemplate is shipped by default with the following templates:
-
-=== Vim ===
-
-  * On creation of a new `.vim` file, the file is filled according to the kind of vim-script detected (from the directory where the new file is stored):
-    * _autoload-plugins_ will contain a few debug oriented functions ;
-    * _(plain) plugins_ will contain a global anti-reinclusion guard and its override variable (for maintenance purpose), an internal `s:k_version` number, and a few indications about what plugins should contain ;
-    * _ft-plugins_ will contain a global and a local anti-reinclusion guard and their override variable (for maintenance purpose), an internal `s:k_version` number, and a few indications about what ft-plugins should contain ;
-    * _local-vimrcs_ will look a lot like ft-plugin ;
-    * otherwise, the file won't contain anything specific ;
-    * *in all cases*:
-      * a default header is filled with RCS tags ($Id$, $Date$), and other fields for the filename (kept relative to `{rtp}` when possible), the author/maintainer, the version, a short description, history, todo, _etc._ ;
-      * `cpo&vim` is set for the duration of the script ;
-      * a footer forces `foldmethod` to `marker`.
-  All the choices made are the result of what I've come to consider over the years to be good practices regarding vim files contents.
-
-  * The snippets _foreach_, _fori_, and _loop-arg_ expand respectively to the `:for` vim-loop, or a `:while` vim-loop that increments _i_, or another index variable.
-
-  * The snippet _plugmap_ expands into an overridable _plug-mapping_.
-
-  * The snippet _autoload-debug_ expands into the debug-oriented functions added by default to autoload-plugins -- its purpose is to add simply those functions to autoload-plugins that don't have them yet.
-
-  * The snippet _function_ expands into a `:function!` definition. If the current script is an autoload-plugin, the function name matches the autoload-plugin name -- to insert other kinds of functions, just use the `fu` abbreviation from `vim_snippets.vim`. Otherwise, the function name will just start with a `s:`.
-
-
-NB: there are no µTemplate snippets for `:if`, `:try`, _etc._ because they are maintained independently thanks to [lhBracket my bracketing system] in `vim_snippets.vim` (todo: add link).
-
-=== C & C++ ===
-
-=== LaTeX ===
-
-=== Perl === 
-
-=== XSLT ===
-
-=== Other ===
 
 
 == Download ==
