--- a/wiki/lhBrackets.wiki
+++ b/wiki/lhBrackets.wiki
@@ -96,12 +96,13 @@ As [lhVimLib lh-vim-lib], map-tools provides a few functions of its own. All the
 
 == Download ==
   * Requirements: Vim 7.+, [lhVimLib lh-vim-lib]
-  * As a vimball: [http://lh-vim.googlecode.com/files/lh-map-tools-1.0.0.vba here], or at [http://www.vim.org/scripts/script.php?script_id=50 Vim.org]
+  * As a vimball: [http://lh-vim.googlecode.com/files/lh-map-tools-1.1.0.vba here], or at [http://www.vim.org/scripts/script.php?script_id=50 Vim.org]
   * Checkout from the SVN repository
     {{{  
 # Non-members may check out a read-only working copy anonymously over HTTP.
 svn checkout http://lh-vim.googlecode.com/svn/map-tools/trunk/ map-tools-read-only
     }}}
+  * Vim Addon Manager: [http://code.google.com/p/lh-vim/source/browse/map-tools/trunk/brackets-addon-info.txt brackets-addon-info.txt]
 
 == Credits ==
   * This bracketing system is actually a variation on [http://mywebpage.netscape.com/bbenjif/vim/Riehm/doc/ Stephen Riehm's original bracketing system] ;
