Edited wiki page muTemplate through web user interface.

--- a/wiki/muTemplate.wiki
+++ b/wiki/muTemplate.wiki
@@ -28,7 +28,7 @@
     * from the INSERT-mode in a snippet-like fashion ;
   * All snippets are defined in their own template-file ;
   * The template-files can be overridden by the user, or in the context of a specific project ;
-  * Filetype specific snippets can be defined for the INSERT-mode (they can be inherited, e.g. C snippets can be used from C++, Java, _etc._);
+  * Filetype specific snippets can be defined for the INSERT-mode (they can be inherited, e.g. C snippets can be used from C++, Java, _etc._), the list of matching snippets will be presented with a hint for each snippet ;
   * Computed VimL expressions can be inserted ;
   * VimL instructions can be executed during the expansion ;
   * Template-files can include other template-files in a function-like manner ;
@@ -224,7 +224,7 @@ VimL: silent! unlet s:times
 
 == Download ==
   * Requirements: Vim 7.+, [lhVimLib lh-vim-lib], [searchInRuntime], and my [lhBrackets bracketing-system]
-  * As a vimball: [http://lh-vim.googlecode.com/files/mu-template-2.1.1.vba here]
+  * As a vimball: [http://lh-vim.googlecode.com/files/mu-template-2.2.0.vba here (v2.2.0)]
   * Checkout from the SVN repository
     {{{  
 # Non-members may check out a read-only working copy anonymously over HTTP.
